email/deployment-db.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: email-db
  name: email-db
  namespace: email
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      k8s-app: email-db
  template:
    metadata:
      labels:
        k8s-app: email-db
    spec:
      terminationGracePeriodSeconds: 2
      containers:
        - name: postgres
          image: postgres:12.1
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: tedy-desktop-debian
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: email-db
