email/deployment-emailhandler.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: email-emailhandler
  name: email-emailhandler
  namespace: tedy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      k8s-app: email-emailhandler
  template:
    metadata:
      labels:
        k8s-app: email-emailhandler
    spec:
      terminationGracePeriodSeconds: 2
      containers:
        - name: simplelogin
          image: simplelogin/app:1.0.3
          resources:
            limits:
              memory: "300Mi"
              cpu: "100m"
          command: ["python"]
          args: ["email_handler.py"]
          ports:
            - containerPort: 20381
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /secret
      volumes:
        - name: data
          secret:
            secretName: email-simplelogin
