email/deployment-postfix.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: email-postfix
  name: email-postfix
  namespace: email
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      k8s-app: email-postfix
  template:
    metadata:
      labels:
        k8s-app: email-postfix
    spec:
      terminationGracePeriodSeconds: 2
      hostNetwork: true
      containers:
        - name: postfix
          image: tedyst/postfix-pqsql-docker:v1.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "300Mi"
              cpu: "100m"
            requests:
              memory: "50Mi"
              cpu: "50m"
          ports:
            - containerPort: 25
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/postfix/main.cf
              name: data
              subPath: main.cf
            - mountPath: /etc/postfix/pgsql-relay-domains.cf
              name: data
              subPath: pgsql-relay-domains.cf
            - mountPath: /etc/postfix/pgsql-transport-maps.cf
              name: data
              subPath: pgsql-transport-maps.cf
            - mountPath: /etc/postfix/sasl_passwd
              name: data
              subPath: sasl_passwd
      volumes:
        - name: data
          configMap:
            name: email-postfix
