email/deployment-simplelogin.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: email-simplelogin
  name: email-simplelogin
  namespace: tedy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      k8s-app: email-simplelogin
  template:
    metadata:
      labels:
        k8s-app: email-simplelogin
    spec:
      terminationGracePeriodSeconds: 2
      containers:
        - name: simplelogin
          image: simplelogin/app:2.0.0
          resources:
            limits:
              memory: "300Mi"
              cpu: "1000m"
            requests:
              memory: "300Mi"
              cpu: "100m"
          ports:
            - containerPort: 7777
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /secret
      volumes:
        - name: data
          secret:
            secretName: email-simplelogin
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: tedy-desktop-debian
