email/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: email-db
  namespace: email
spec:
  ports:
    - port: 5432
      protocol: TCP
  selector:
    k8s-app: email-db
  type: ClusterIP
