email/service-emailhandler.yml
apiVersion: v1
kind: Service
metadata:
  name: email-emailhandler
  namespace: tedy
spec:
  ports:
    - port: 20381
      protocol: TCP
  selector:
    k8s-app: email-emailhandler
  type: ClusterIP
