email/service-postfix.yml
apiVersion: v1
kind: Service
metadata:
  name: email-postfix
  namespace: email
spec:
  ports:
    - port: 25
      protocol: TCP
  selector:
    k8s-app: email-postfix
  type: ClusterIP
