email/service-postfix2.yml
apiVersion: v1
kind: Service
metadata:
  name: smtp-server
  namespace: email
spec:
  ports:
    - port: 25
      protocol: TCP
  selector:
    k8s-app: smtp-server
  type: ClusterIP
