email/service-simplelogin.yml
apiVersion: v1
kind: Service
metadata:
  name: email-simplelogin
  namespace: email
spec:
  ports:
    - port: 7777
      protocol: TCP
  selector:
    k8s-app: email-simplelogin
  type: ClusterIP
